# information-hiding-from-external-llms

./: .gitignore  Makefile  README.md  REPORT.md  generate_report.py  pyproject.toml
sample_data/: toymakers_memo.txt
src/pseudopipe/: __init__.py  __main__.py  config.py  deanonymizer.py  detection.py  external_llm.py  generation.py  mapping.py  metrics.py  pipeline.py  replacement.py  similarity.py
tests/: test_deanonymizer.py  test_detection.py  test_generation.py  test_mapping.py  test_metrics.py  test_replacement.py  test_similarity.py
